--- a/index.html
+++ b/index.html
@@ -3,7 +3,138 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Epicode - il blog dei developers</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="./assets/img/logo.svg" alt="epicode logo" />
+      <h1>
+        Come creare un template per il post di Mario Rossi - pubblicato iol
+        25-10-2020
+      </h1>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Articoli</li>
+          <li>Lavora con noi</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <article>
+          <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a tutte le pagine</p>
+        </article>
+        <article>
+            <p>le varie aree saranno quindi suddivise in:</p>
+            <ul>
+                <li>Contenutti di intestazione del tag &lt;header&gt;</li>
+                <li>Contenuti centrali variabili del tag &lt;main&gt; </li>
+                <li>Contenuti di fine pagina comuni, inserire nel tag &lt;footer&gt;</li>
+        </article>
+        <article>
+            <p>Formazione del codice</p>
+        </article>
+        <article>
+            <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da selezionare con i CSS. Perciò i passi saranno:
+            </p>
+        </article>
+        <article>
+            <ol>
+                <li>Progettare il makup assegnando ad ogni testo specifico testo il tag appropriato</li>
+                <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
+                <li>Applicare gli stili CSS</li>
+            </ol>
+        </article>
+        <article>
+            L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressochè totale.
+        </article>
+
+      </section>
+      <table>
+        <caption>
+          Diffusione del CSS
+        </caption>
+        <thead>
+          <tr>
+            <th scope="col">Anno</th>
+            <th scope="col">% di utilizzo</th>
+            <th scope="col">Supporto Browser</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">2000</th>
+            <td>20%</td>
+            <td>17%</td>
+          </tr>
+          <tr>
+            <th scope="row">2002</th>
+            <td>35%</td>
+            <td>22%</td>
+          </tr>
+          <tr>
+            <th scope="row">2004</th>
+            <td>45%</td>
+            <td>42%</td>
+          </tr>
+          <tr>
+            <th scope="row">2008</th>
+            <td>80%</td>
+            <td>51%</td>
+          </tr>
+          <tr>
+            <th scope="row">2012</th>
+            <td>100%</td>
+            <td>76%</td>
+          </tr>
+        </tbody>
+      </table>
+      <div>
+      <p>
+        Un test di validazione potrà essere fatto tramite il tool online
+        <a href="https://jigsaw.w3.org/css-validator/#validate_by_uri"
+          >CSS Validation Service</a
+        >
+        dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il
+        nostro obiettivo ed essere stati dei veri developers come loro:
+        <iframe
+          width="300"
+          height="200"
+          src="https://www.youtube.com/embed/XkytpXSTJ-w"
+          title="Spaghetti alla carbonara: tutorial ricetta originale"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </p>
+    </div>
+    <div>
+      <p>Vuoi rimanere aggiornato su altre novità dei blog? iscriviti alla nostra newsletter:</p>
+      <label for="email">Inserisci l'email:</label>
+      <input type="email" id="email" pattern=".+@example\.com" size="30" required />
+    </div>
+    <div>
+        <label for="email">iscriviti!</label>
+      <button type="button">invio</button>
+    </div>
+    </main>
+    <footer>
+        <div>
+            <p>
+            Blog Epicode @2023
+            </P>
+        </div>
+        <div>
+            <p>
+            Testata online di Mario Rossi, registrati con prot. n.213/2028 - via Luigi Elnaudi 2 - Milano. P.IVA 00112233.
+            <a href="https://jigsaw.w3.org/css-validator/#validate_by_uri"
+          >info@epicode.shool</a
+        >
+    </p>
+        </div>
+    </footer>
+  </body>
 </html>
