--- a/index.html
+++ b/index.html
@@ -120,6 +120,26 @@
         <label for="email">iscriviti!</label>
       <button type="button">invio</button>
     </div>
+    <div>
+        <p>Articoli correlati <br>
+        Validare il codice Html <br>
+        Categoria: develop <br>
+        Data: 18-9-2020 <br>
+        </p>
+    
+    </div>
+    <div>
+        <p>Correggere la sintassi <br>
+        Categoria: develop <br>
+        Data: 16-9-2020
+        </p>
+    </div>
+    <div>
+        <p>Meno Kb nella pagina <br>
+            Categoria: ottimizzazione <br>
+            Data: 30-9-2020
+        </p>
+    </div>
     </main>
     <footer>
         <div>
