--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         25-10-2020
       </h1>
       <nav>
-        <ul>
-          <li>Home</li>
-          <li>Articoli</li>
-          <li>Lavora con noi</li>
-        </ul>
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">Articoli</a>
+          <a href="#">Lavora con noi</a>
+        </nav>
       </nav>
     </header>
     <main>
