--- a/index.html
+++ b/index.html
@@ -24,33 +24,47 @@
     <main>
       <section>
         <article>
-          <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a tutte le pagine</p>
+          <p>
+            La prima cosa da fare è suddividere in blocchi logici la pagina,
+            identificando le parti comuni da applicare a tutte le pagine
+          </p>
         </article>
         <article>
-            <p>le varie aree saranno quindi suddivise in:</p>
-            <ul>
-                <li>Contenutti di intestazione del tag &lt;header&gt;</li>
-                <li>Contenuti centrali variabili del tag &lt;main&gt; </li>
-                <li>Contenuti di fine pagina comuni, inserire nel tag &lt;footer&gt;</li>
+          <p>le varie aree saranno quindi suddivise in:</p>
+          <ul>
+            <li>Contenutti di intestazione del tag &lt;header&gt;</li>
+            <li>Contenuti centrali variabili del tag &lt;main&gt;</li>
+            <li>
+              Contenuti di fine pagina comuni, inserire nel tag &lt;footer&gt;
+            </li>
+          </ul>
         </article>
         <article>
-            <p>Formazione del codice</p>
+          <p>Formazione del codice</p>
         </article>
         <article>
-            <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da selezionare con i CSS. Perciò i passi saranno:
-            </p>
+          <p>
+            Il testo dell'articolo dovrà essere formattato per identificare
+            tutte le parti da selezionare con i CSS. Perciò i passi saranno:
+          </p>
         </article>
         <article>
-            <ol>
-                <li>Progettare il makup assegnando ad ogni testo specifico testo il tag appropriato</li>
-                <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
-                <li>Applicare gli stili CSS</li>
-            </ol>
+          <ol>
+            <li>
+              Progettare il makup assegnando ad ogni testo specifico testo il
+              tag appropriato
+            </li>
+            <li>
+              Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso
+              il basso
+            </li>
+            <li>Applicare gli stili CSS</li>
+          </ol>
         </article>
         <article>
-            L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressochè totale.
+          L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere
+          la diffusione pressochè totale.
         </article>
-
       </section>
       <table>
         <caption>
@@ -92,69 +106,79 @@
         </tbody>
       </table>
       <div>
-      <p>
-        Un test di validazione potrà essere fatto tramite il tool online
-        <a href="https://jigsaw.w3.org/css-validator/#validate_by_uri"
-          >CSS Validation Service</a
-        >
-        dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il
-        nostro obiettivo ed essere stati dei veri developers come loro:
-        <iframe
-          width="300"
-          height="200"
-          src="https://www.youtube.com/embed/XkytpXSTJ-w"
-          title="Spaghetti alla carbonara: tutorial ricetta originale"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
-      </p>
-    </div>
-    <div>
-      <p>Vuoi rimanere aggiornato su altre novità dei blog? iscriviti alla nostra newsletter:</p>
-      <label for="email">Inserisci l'email:</label>
-      <input type="email" id="email" pattern=".+@example\.com" size="30" required />
-    </div>
-    <div>
+        <p>
+          Un test di validazione potrà essere fatto tramite il tool online
+          <a href="https://jigsaw.w3.org/css-validator/#validate_by_uri"
+            >CSS Validation Service</a
+          >
+          dedicato allo scopo. Una volta ottimizzato il tutto, avremo raggiunto
+          il nostro obiettivo ed essere stati dei veri developers come loro:
+          <iframe
+            width="300"
+            height="200"
+            src="https://www.youtube.com/embed/XkytpXSTJ-w"
+            title="Spaghetti alla carbonara: tutorial ricetta originale"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </p>
+      </div>
+      <div>
+        <p>
+          Vuoi rimanere aggiornato su altre novità dei blog? iscriviti alla
+          nostra newsletter:
+        </p>
+        <label for="email">Inserisci l'email:</label>
+        <input
+          type="email"
+          id="email"
+          pattern=".+@example\.com"
+          size="30"
+          required
+        />
+      </div>
+      <div>
         <label for="email">iscriviti!</label>
-      <button type="button">invio</button>
-    </div>
-    <div>
-        <p>Articoli correlati <br>
-        Validare il codice Html <br>
-        Categoria: develop <br>
-        Data: 18-9-2020 <br>
+        <button type="button">invio</button>
+      </div>
+      <div>
+        <p>
+          Articoli correlati <br />
+          Validare il codice Html <br />
+          Categoria: develop <br />
+          Data: 18-9-2020 <br />
         </p>
-    
-    </div>
-    <div>
-        <p>Correggere la sintassi <br>
-        Categoria: develop <br>
-        Data: 16-9-2020
+      </div>
+      <div>
+        <p>
+          Correggere la sintassi <br />
+          Categoria: develop <br />
+          Data: 16-9-2020
         </p>
-    </div>
-    <div>
-        <p>Meno Kb nella pagina <br>
-            Categoria: ottimizzazione <br>
-            Data: 30-9-2020
+      </div>
+      <div>
+        <p>
+          Meno Kb nella pagina <br />
+          Categoria: ottimizzazione <br />
+          Data: 30-9-2020
         </p>
-    </div>
+      </div>
     </main>
     <footer>
-        <div>
-            <p>
-            Blog Epicode @2023
-            </P>
-        </div>
-        <div>
-            <p>
-            Testata online di Mario Rossi, registrati con prot. n.213/2028 - via Luigi Elnaudi 2 - Milano. P.IVA 00112233.
-            <a href="https://jigsaw.w3.org/css-validator/#validate_by_uri"
-          >info@epicode.shool</a
-        >
-    </p>
-        </div>
+      <div>
+        <p>Blog Epicode @2023</p>
+      </div>
+      <div>
+        <p>
+          Testata online di Mario Rossi, registrati con prot. n.213/2028 - via
+          Luigi Elnaudi 2 - Milano. P.IVA 00112233.
+          <a href="https://jigsaw.w3.org/css-validator/#validate_by_uri"
+            >info@epicode.shool</a
+          >
+        </p>
+      </div>
     </footer>
   </body>
 </html>
